# Hackathon_2

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_SUMMARY.md  PHASE3_FIX_HANDOFF.md  README.md  SESSION_CONTINUATION_SUMMARY.md  docker-compose.yml  manual_chat_test.py  pytest.ini  quickstart.md  requirements.md  stateless_validator.py  test-guide.md  test_chat_integration.py  test_chatbot.py  test_gemini_direct.py  test_validation.py
.claude/: settings.local.json
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  HOW_TO_USE_GEMINI.md  MIGRATION_DEPLOYMENT_GUIDE.md  MIGRATION_FIX_SUMMARY.md  PRODUCTION_FIX_README.md  README.md  SWITCH_TO_GEMINI_WHEN_READY.md  alembic.ini  apply_final_schema.py  check_env.py  check_priorities.py  check_tables.py  fix_database_now.py  fix_database_schema.py  fix_migration.py  fix_production_migration.py  fix_production_schema_direct.py  pytest.ini  recreate_schema.py  requirements.txt  run_prod_migration.py  simple_fix.py  test_agent.py  test_chat_integration.py  test_chat_mock.py  test_chat_simple.py  test_endpoint.py  test_gemini_direct.py  test_groq.py  test_mock_ai.py  update-cors.sh  vercel.json  verify_migration.py  verify_schema.py
docs/: AI_DEVOPS_TOOLS.md  DIGITALOCEAN_INFRASTRUCTURE_SETUP.md  DIGITALOCEAN_MONITORING_QUICK_REFERENCE.md  DIGITALOCEAN_QUICK_REFERENCE.md  GITHUB_ACTIONS_SETUP.md  KAFKA_DEPLOYMENT_STATUS.md  KAFKA_QUICK_REFERENCE.md  KUBERNETES_QUICK_REFERENCE.md  (+2 more)
src/: README.md  __init__.py  __main__.py  cli.py  main.py  models.py  pyproject.toml
(+789 files in other folders)
